--- a/contact.html
+++ b/contact.html
@@ -42,26 +42,28 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
                 <h1 id="firstHeadingContact">Contact Me</h1>
-
                 <!-- id to bring text from my contact.js page to my contact.html page -->
                 <p id="FirstContactParagraph"></p>
 
+                <form>
+                    <div class="form-group">
+                        <label for="FullName">Full Name</label>
+                        <input type="text" class="form-control" id="FullName" placeholder="Enter Full Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="Email">Email address</label>
+                        <input type="email" class="form-control" id="Email" placeholder="Enter Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="Message">Your Message</label>
+                        <textarea class="form-control" rows="3" id="Message" placeholder="Enter Your Message" reuired></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send</button>
+                </form>
+
+               
+
                 <!-- contact form that links back to main page when "Submit" button is clicked -->
-                <form action="index.html">
-                    <fieldset>
-                        <label for="name">Name:</label>
-                        <input name="name" id="name" /> 
-                    </fieldset>
-                    <fieldset>
-                        <label for="number">Number:</label>
-                        <input name="number" id="number" /> 
-                    </fieldset>
-                    <fieldset>
-                        <label for="message">Message:</label>
-                        <input name="message" id="message" /> 
-                    </fieldset>
-                <!-- Unique button id -->
-                <button id="submitButton" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
