--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,10 @@
                         <input type="text" class="form-control" id="FullName" placeholder="Enter Full Name" required>
                     </div>
                     <div class="form-group">
+                        <label for="Number">Contact Number</label>
+                        <input type="tel" class="form-control" id="ContactNumber" placeholder="Enter Phone Number" required>
+                    </div>
+                    <div class="form-group">
                         <label for="Email">Email address</label>
                         <input type="email" class="form-control" id="Email" placeholder="Enter Your Email" required>
                     </div>
