added reset button and JavaScript

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,8 @@
                         <label for="Message">Your Message</label>
                         <textarea class="form-control" rows="3" id="Message" placeholder="Enter Your Message" reuired></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Send</button>
+                    <button type="submit" id="SendButton" class="btn btn-primary">Send</button>
+                    <button type="reset" id="ResetButton" class="btn btn-warning">Reset</button>
                 </form>
 
                
