--- a/contact.html
+++ b/contact.html
@@ -83,6 +83,6 @@
     <script src="./Scripts/lib/jquery/dist/jquery.min.js"></script>
     <script src="./Scripts/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Changed to contact.js -->
-    <script src="./Scripts/contact.js"></script>
+    <script src="./Scripts/app.js"></script>
 </body>
 </html>
