--- a/index.html
+++ b/index.html
@@ -36,20 +36,14 @@
   </div>
 </nav>
 
-
     <!-- Main Section -->
     <div class="container" id="MainContentDiv">
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
                 <h1 id="firstHeading">Mini Portfolio</h1>
-
-                <p id="FirstParagraph"></p>
-
-                <p id="SecondParagraph"></p> 
-
                 <img src="../images/Jesse-Cannon-photo.JPG" height="260" width="200">
-
-               
+                <p>Hello, my name is Jesse Cannon and my goal of this portfolio site is to show you all of my web design skills I have acquired from my time at Georgian College. My Projects page will display all of the top pieces of work I have done so far for visuals. While the Contact page will ask you for your contact information. I hope my page is of great use to you.</p>
+                <strong>Jesse Cannon</strong>
             </div>
         </div>
     </div>
