--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html"><i class="fa fa-home fa-2x"></i> Home</a></li>
+        <li><a href="index.html"><i class="fa fa-home fa-2x"></i> Home</a></li>
         <li><a href="projects.html"><i class="fa fa-briefcase fa-2x"></i> Projects</a></li>
-        <li><a href="contact.html"><i class="fa fa-envelope fa-2x"></i> Contact Me</a></li>
+        <li class="active"><a href="contact.html"><i class="fa fa-envelope fa-2x"></i> Contact Me</a></li>
       </ul>
     </div>
   </div>
@@ -42,9 +42,12 @@
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
                 <h1 id="firstHeadingContact">Contact Me</h1>
+                <a href="https://www.linkedin.com/in/jesse-cannon-678294127">Visit my Linkedin Page</a>
+                <p><a href="https://github.com/JCannon1">GitHub Page</a></p>
                 <!-- id to bring text from my contact.js page to my contact.html page -->
                 <p id="FirstContactParagraph"></p>
 
+                <!-- contact form that links back to main page when "Submit" button is clicked -->
                 <form>
                     <div class="form-group">
                         <label for="FullName">Full Name</label>
@@ -65,10 +68,6 @@
                     <button type="submit" id="SendButton" class="btn btn-primary">Send</button>
                     <button type="reset" id="ResetButton" class="btn btn-warning">Reset</button>
                 </form>
-
-               
-
-                <!-- contact form that links back to main page when "Submit" button is clicked -->
             </div>
         </div>
     </div>
