--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html"><i class="fa fa-home fa-2x"></i> Home</a></li>
-        <li><a href="projects.html"><i class="fa fa-briefcase fa-2x"></i> Projects</a></li>
+        <li><a href="index.html"><i class="fa fa-home fa-2x"></i> Home</a></li>
+        <li class="active"><a href="projects.html"><i class="fa fa-briefcase fa-2x"></i> Projects</a></li>
         <li><a href="contact.html"><i class="fa fa-envelope fa-2x"></i> Contact Me</a></li>
       </ul>
     </div>
@@ -44,15 +44,15 @@
                 <h1 id="firstHeadingProjects">Projects</h1>
 
                 <!-- added first project image and link -->
-                <h2 id="secondHeadingProjects">Project 1  - Navigation With Lists</h2>
+                <h2 id="secondHeadingProjects">Project 1  - NHL Database</h2>
                 <p id="FirstProject"></p>
-                <a href="http://jcannonassignment4.azurewebsites.net">Project 1</a>
+                <a href="https://jessecannon-assignment2-comp2084.azurewebsites.net/">Project 1</a>
                 <img src="../images/Project1.png" height="400" width="800">
 
                 <!-- added second project image and link -->
-                <h2 id="thirdHeadingProjects">Project 2 - Charles Cretors Popcorn Machine</h2>
+                <h2 id="thirdHeadingProjects">Project 2 - 99: Stories of the Game Gretzky Book Sale</h2>
                 <p id="SecondProject"></p> 
-                <a href="http://jcannonproject1.azurewebsites.net/index.html">Project 2</a>
+                <a href="https://comp2081-assignment2-jessecannon.azurewebsites.net/">Project 2</a>
                 <img src="../images/Project2.png" height="400" width="800">
                
                 <!-- added third project image and link -->
@@ -60,6 +60,11 @@
                  <p id="ThirdProject"></p> 
                  <a href="http://star-wars-movie-poster-jessecannon.azurewebsites.net/Assignment-3-Movie-Poster/assignment3movieposter.html">Project 3</a>
                 <img src="../images/Project3.png" height="400" width="800">
+
+                <h2 id="fourthHeadingProjects">Project 4 - Spartan Sports</h2>
+                 <p id="FourthProject"></p> 
+                 <a href="https://jessecannon-comp2081-assignment1.azurewebsites.net/">Project 4</a>
+                <img src="../images/Project4.png" height="400" width="800">
             </div>
         </div>
     </div>
