--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="index.html"><i class="fa fa-home fa-2x"></i> Home</a></li>
+        <li><a href="about.html"><i class="fa fa-briefcase fa-2x"></i> About</a></li>
+        <li><a href="skills.html"><i class="fa fa-envelope fa-2x"></i> Skills</a></li>
         <li><a href="projects.html"><i class="fa fa-briefcase fa-2x"></i> Projects</a></li>
         <li class="active"><a href="contact.html"><i class="fa fa-envelope fa-2x"></i> Contact Me</a></li>
       </ul>
