--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mini Portfolio</title>
+    <title>Portfolio</title>
     <!-- CSS Section -->
     <link rel="stylesheet" href="./Scripts/lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./Scripts/lib/bootstrap/dist/css/bootstrap-theme.min.css">
@@ -29,6 +29,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="index.html"><i class="fa fa-home fa-2x"></i> Home</a></li>
+        <li><a href="about.html"><i class="fa fa-briefcase fa-2x"></i> About</a></li>
+        <li><a href="skills.html"><i class="fa fa-envelope fa-2x"></i> Skills</a></li>
         <li><a href="projects.html"><i class="fa fa-briefcase fa-2x"></i> Projects</a></li>
         <li><a href="contact.html"><i class="fa fa-envelope fa-2x"></i> Contact Me</a></li>
       </ul>
@@ -40,7 +42,7 @@
     <div class="container" id="MainContentDiv">
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
-                <h1 id="firstHeading">Mini Portfolio</h1>
+                <h1 id="firstHeading">Portfolio</h1>
                 <img src="../images/Jesse-Cannon-photo.JPG" height="260" width="200">
                 <p>Hello, my name is Jesse Cannon and my goal of this portfolio site is to show you all of my web design skills I have acquired from my time at Georgian College. My Projects page will display all of the top pieces of work I have done so far for visuals. While the Contact page will ask you for your contact information. I hope my page is of great use to you.</p>
                 <strong>Jesse Cannon</strong>
