--- a/about.html
+++ b/about.html
@@ -53,6 +53,10 @@
     <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
     <h4>&copy 2017 - COMP1073- All Rights Reserved</h4>
+    <a href="https://www.linkedin.com/in/jesse-cannon-678294127"> <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+    <a href="https://github.com/JCannon1"> <i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+    <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+    <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
   </div>
 </nav>
     <!-- JavaScript Section -->
